# pachinko-the-revenge

./: .gitignore  CLAUDE.md  Cargo.toml  MAGNETFRAGNET_FEEDBACK.md  intent.md  magnetfragnet.config.json
.claude/: settings.json
adr/: 001-base-rate-as-derived-measurement.md  004-multi-cabinet-architecture.md  README.md
audits/: README.md  index.json
audits/audit-001-cabinet-slot-vs-pachinko-2026-05-25/: evidence.json  hypotheses.json  metadata.json  sources.json
audits/audit-002-iter4-design-direction-2026-05-25/: evidence.json  hypotheses.json  metadata.json  sources.json
audits/schema/: PROVENANCE.md
docs/: index.html  pachinko-game.wasm
docs/iteration1/: index.html  pachinko-game.wasm
docs/iteration2/: index.html  pachinko-game.wasm
docs/iteration3/: index.html  pachinko-game.wasm
docs/iteration4/: index.html  pachinko-game.wasm
pachinko-core/: Cargo.toml
pachinko-core/src/: coordinator.rs  lib.rs  outcome.rs  probability.rs  reach.rs  save.rs  session.rs  spec.rs  state.rs
pachinko-game/: Cargo.toml
pachinko-game/src/: audio.rs  ball.rs  main.rs  persist.rs  playfield.rs  render.rs  scene.rs
pachinko-the-revenge/: .mcp.json
prd/: 001-mvp-pachinko-cabinet.md  002-ball-physics-and-pin-field.md  003-event-celebrations-and-cabinet-depth.md  004-nail-adjustment-contextual-minimalism-session-continuity.md  005-multi-cabinet-platform.md  README.md
prompts/: MANIFEST.md  README.md  style-guide.md
prompts/cabinets/: deep-sea-song.md  neon-fever.md  sync-rate-400.md  the-revenge.md  thunder-herald.md
rca/: README.md  index.json
research/: iter4-mechanics-options.md  iter4-ui-options.md  user-feedback-2026-05-25-iteration-3-direction.md  user-feedback-2026-05-25-slot-machine.md
stories/: 001-pin-layout-config-struct.md  002-stock-layout-base-test.md  003-tuning-workshop-ui.md  004-predicted-base-confidence-interval.md  005-persistence-via-quad-storage.md  006-session-end-summary.md  007-welcome-back-card.md  008-environmental-reach-cues-and-bgm-crossfade.md  009-cabinet-def-and-registry.md  010-cabinet-selection-screen.md  011-mid-session-cabinet-swap.md  012-themepack-render-integration.md  013-per-cabinet-persistence-namespace.md  014-parlor-card-meta-progression.md  015-deep-sea-song-cabinet.md  016-tidal-rush-mechanic.md  017-the-revenge-port-to-platform.md  018-sprite-cache-and-procedural-pipeline.md  019-back-panel-renderer-per-theme.md  020-phase-b-embedded-sprite-assets.md  021-stock-layout-band-test-per-cabinet.md  README.md
web/: index.html  pachinko-game.wasm
(+7 files in other folders)
