[workspace]
members = ["pachinko-core", "pachinko-game"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pachinko-the-revenge"]
license = "MIT"
publish = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.pachinko-core]
opt-level = 3

[profile.dev]
opt-level = 1
