[package]
name = "pachinko-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Headless math + state machine for pachinko-the-revenge. No I/O, no rendering, no audio."

[lib]
crate-type = ["rlib"]

[dependencies]
rand_pcg = { version = "0.9", default-features = false }
rand_core = { version = "0.9", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", optional = true }

[features]
default = ["std"]
std = ["serde/std", "dep:serde_json"]

[dev-dependencies]
serde_json = "1"
