[package]
name = "pachinko-game"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "macroquad-based game shell for pachinko-the-revenge. Wraps pachinko-core with rendering, audio, input, persistence."

[[bin]]
name = "pachinko-game"
path = "src/main.rs"

[dependencies]
pachinko-core = { path = "../pachinko-core", features = ["std"] }
# IMPORTANT: do NOT pass default-features = false here. macroquad's default
# features include "audio", which links the macroquad_audio JS plugin glue
# in WASM. Without it, load_sound_from_bytes panics on first call and the
# WASM never gets past AudioBank::build() → black canvas.
macroquad = "0.4"
serde_json = "1"
